DOMFileSystemBase: fix multiple definitions in the BlackBerry port https://bugs.webkit.org/show_bug.cgi?id=114950

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-04-24
Reviewed by Xan Lopez.

The following  methods are already defined in DOMFileSystemBlackBerry.cpp:

crackFileSystemURL()
createFileSystemURL()
isValidType()
supportsToURL()

* Modules/filesystem/DOMFileSystemBase.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/133533@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149034 268f45cc-cd09-0410-ab3c-d52691b4dbfc