Source/WebCore/Modules/filesystem/DOMFileSystemBase.cpp
@@ -71,6 +71,7 @@ DOMFileSystemBase::~DOMFileSystemBase()
 {
 }
 
+#if !PLATFORM(BLACKBERRY)
 // static
 bool DOMFileSystemBase::isValidType(FileSystemType type)
 {
@@ -112,6 +113,7 @@ KURL DOMFileSystemBase::createFileSystemURL(const String& fullPath) const
     url.setPath(url.path() + encodeWithURLEscapeSequences(fullPath.substring(1)));
     return url;
 }
+#endif
 
 SecurityOrigin* DOMFileSystemBase::securityOrigin() const
 {
